--- a/WineTypeBC.ipynb
+++ b/WineTypeBC.ipynb
@@ -6,7 +6,7 @@
       "name": "WineTypeBC.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyOhRgIkBqbEcSeStMHdaA9Q",
+      "authorship_tag": "ABX9TyNC3h1XjjonrIthVjFjt+qf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -313,7 +313,8 @@
         "colab_type": "text"
       },
       "source": [
-        "# **Split the dataset into a training set and a test set**"
+        "# **Split the dataset into a training set and a test set**\n",
+        "Models with very few hyperparameters will be easy to validate and tune, so you can probably reduce the size of your validation set, but if your model has many hyperparameters, you would want to have a large test set as well"
       ]
     },
     {
@@ -335,6 +336,7 @@
       },
       "source": [
         "#Consider changing the ratio of the train/test split\n",
+        "#fac .95 - .5\n",
         "wines_train = wines.sample(frac=0.5,random_state=0)\n",
         "wines_test = wines.drop(wines_train.index)\n",
         "print(\"done\")"
@@ -459,12 +461,17 @@
       "source": [
         "# **Build the model**\n",
         "There are several hyper-parameters that can be tuned in this cell. <br>\n",
-        "The size of the layer<br>\n",
-        "The activation functions<br>\n",
-        "The number of layers<br>\n",
-        "The optimizer<br>\n",
-        "The learning rate of the optimizer<br>\n",
-        "The loss function<br>\n",
+        ">**The number of layers**: Increasing the number of hidden layers might improve the accuracy or it might not, it depends on the complexity of the problem that you are trying to solve.<br>\n",
+        "Increasing the number of hidden layers much more than the sufficient number of layers will cause accuracy in the test set to decrease. It will cause your network to overfit to the training set.<br>\n",
+        "**The activation functions**: <br>\n",
+        ">*Sigmoid*: Vanishing gradient problem<br>\n",
+        ">Tanh: (hyperbolic tangent)Vanishing gradient problem\n",
+        ">*Relu*: Avoids and rectifies vanishing gradient problem. It should only be used within hidden layers. ReLu could result in Dead Neurons.\n",
+        ">*Leaky ReLu*: fix the problem of dying neurons. It introduces a small slope to keep the updates alive\n",
+        "**The size of layers**: Increasing or decreasing the number of nodes provides a short-cut to increasing the capacity of the model with fewer resources, and modern techniques allow learning algorithms to successfully train deep models<br>\n",
+        "**The optimizer**<br>\n",
+        "**The learning rate of the optimizer**<br>\n",
+        "**The loss function<**br>\n",
         "\n"
       ]
     },
@@ -630,6 +637,48 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vvQR2Y7bYMA5",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "loss, mae, mse,acc = model.evaluate(normed_test_data, test_labels, verbose=0)\n",
+        "\n",
+        "print(\"Testing set Mean Abs Error: {:5.2f}\".format(mae))\n",
+        "print(\"Accuracy = \", acc)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Y-MuZ7UR0ZfA",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Confusion Matrix**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "W4nkeO2MlYHz",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from sklearn.metrics import confusion_matrix\n",
+        "test_l = model.predict_classes(normed_test_data)\n",
+        "#0,0=true neg, 1,0=false neg, 1,1=true pos, 0,1=false pos\n",
+        "confusion_matrix(test_labels, test_l)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "sIugdAJcQjka",
@@ -739,38 +788,6 @@
       "source": [
         "print(\"prediction is \", prediction)\n",
         "print(\"actual value is \", prediction_labels.iloc[number] )"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "vvQR2Y7bYMA5",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "loss, mae, mse,acc = model.evaluate(normed_test_data, test_labels, verbose=0)\n",
-        "\n",
-        "print(\"Testing set Mean Abs Error: {:5.2f}\".format(mae))\n",
-        "print(\"Accuracy = \", acc)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "W4nkeO2MlYHz",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "from sklearn.metrics import confusion_matrix\n",
-        "test_l = model.predict_classes(normed_test_data)\n",
-        "#0,0=true neg, 1,0=false neg, 1,1=true pos, 0,1=false pos\n",
-        "confusion_matrix(test_labels, test_l)"
       ],
       "execution_count": 0,
       "outputs": []
