--- a/WineTypeBC.ipynb
+++ b/WineTypeBC.ipynb
@@ -6,7 +6,7 @@
       "name": "WineTypeBC.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyNC3h1XjjonrIthVjFjt+qf",
+      "authorship_tag": "ABX9TyOZWOCqj3gglqhloODfBUbS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -464,14 +464,15 @@
         ">**The number of layers**: Increasing the number of hidden layers might improve the accuracy or it might not, it depends on the complexity of the problem that you are trying to solve.<br>\n",
         "Increasing the number of hidden layers much more than the sufficient number of layers will cause accuracy in the test set to decrease. It will cause your network to overfit to the training set.<br>\n",
         "**The activation functions**: <br>\n",
-        ">*Sigmoid*: Vanishing gradient problem<br>\n",
-        ">Tanh: (hyperbolic tangent)Vanishing gradient problem\n",
-        ">*Relu*: Avoids and rectifies vanishing gradient problem. It should only be used within hidden layers. ReLu could result in Dead Neurons.\n",
-        ">*Leaky ReLu*: fix the problem of dying neurons. It introduces a small slope to keep the updates alive\n",
+        ">*Sigmoid*: Vanishing gradient problem. For a shallow network with only a few layers that use these activations, this isn’t a big problem.<br>\n",
+        ">*Tanh*: (hyperbolic tangent)Vanishing gradient problem<br>\n",
+        ">*Relu*: Avoids and rectifies vanishing gradient problem. ReLu could result in Dead Neurons.<br>\n",
         "**The size of layers**: Increasing or decreasing the number of nodes provides a short-cut to increasing the capacity of the model with fewer resources, and modern techniques allow learning algorithms to successfully train deep models<br>\n",
-        "**The optimizer**<br>\n",
-        "**The learning rate of the optimizer**<br>\n",
-        "**The loss function<**br>\n",
+        "**The optimizer**: Optimizers update the weight parameters to minimize the loss function. The loss function acts as a guide to the terrain telling optimizer if it is moving in the right direction to reach the global minimum.<br>\n",
+        "**The learning rate of the optimizer**: Must be >= 0. Varies from .001 --><br>\n",
+        "**The loss function**: The Mean Squared Error, or MSE, loss is the default loss to use for regression problems. Mathematically, it is the preferred loss function under the inference framework of maximum likelihood if the distribution of the target variable is Gaussian. It is the loss function to be evaluated first and only changed if you have a good reason.\n",
+        "\n",
+        "<br>\n",
         "\n"
       ]
     },
