--- a/WineTypeBC.ipynb
+++ b/WineTypeBC.ipynb
@@ -6,7 +6,7 @@
       "name": "WineTypeBC.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyOZWOCqj3gglqhloODfBUbS",
+      "authorship_tag": "ABX9TyOfojylvqnbYiGXFVyPdX92",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -324,7 +324,7 @@
         "colab_type": "text"
       },
       "source": [
-        "**The fraction variable is a hyperparameter that can be tuned "
+        "**The 'frac' variable is a hyperparameter that can be tuned "
       ]
     },
     {
