--- a/diabetesML.ipynb
+++ b/diabetesML.ipynb
@@ -6,7 +6,7 @@
       "name": "diabetesML.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyNHr3YHu7EZT7NkWqlM/fR6",
+      "authorship_tag": "ABX9TyNGS8oyc+r+a23TMvDPTasr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -267,12 +267,23 @@
         "colab": {}
       },
       "source": [
-        "df_train = dataset.sample(frac=0.8,random_state=0)\n",
+        "#Choose a number for frac 0.2 - 0.95\n",
+        "df_train = dataset.sample(frac=##,random_state=0)\n",
         "df_test = dataset.drop(df_train.index)\n",
         "print(\"done\")"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NMqu7QsewKEg",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Remove the labels**"
+      ]
     },
     {
       "cell_type": "code",
@@ -287,6 +298,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-iaL8LIBwPrt",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Normalize the data**"
+      ]
     },
     {
       "cell_type": "code",
@@ -337,6 +358,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "grEhCLvDwUbF",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Create the model**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "ShSUpniAiwMB",
@@ -345,9 +376,11 @@
       },
       "source": [
         "model = keras.Sequential()\n",
-        "model.add(Dense(12, input_shape=([len(df_train.keys())]), activation='relu'))\n",
-        "model.add(Dense(8, activation='relu'))\n",
-        "model.add(Dense(1, activation='sigmoid'))"
+        "#Choose the size of the layers and the activation functions\n",
+        "model.add(Dense(##, input_shape=([len(df_train.keys())]), activation='???'))\n",
+        "#More layers???\n",
+        "model.add(Dense(##, activation='???'))\n",
+        "model.add(Dense(1, activation='???'))"
       ],
       "execution_count": 0,
       "outputs": []
@@ -370,6 +403,16 @@
       },
       "source": [
         "https://keras.io/optimizers/"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Gd_QRuIKwaZN",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Set the HyperParameters**"
       ]
     },
     {
@@ -399,10 +442,21 @@
         "colab": {}
       },
       "source": [
-        "EPOCHS = 5"
+        "#Choose how many epochs to do \n",
+        "EPOCHS = ##"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zwnZlO04wqPQ",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Train the model**"
+      ]
     },
     {
       "cell_type": "code",
@@ -414,7 +468,8 @@
       "source": [
         "history = model.fit(\n",
         "  normed_train_data, train_labels,\n",
-        "  epochs=EPOCHS, validation_split = 0.2, verbose=1,batch_size = 10 )"
+        "  #Choose the batch size\n",
+        "  epochs=EPOCHS, validation_split = 0.2, verbose=1,batch_size = #### )"
       ],
       "execution_count": 0,
       "outputs": []
@@ -429,7 +484,7 @@
       "source": [
         "hist = pd.DataFrame(history.history)\n",
         "hist['epochs'] = history.epoch\n",
-        "hist.tail(17)"
+        "hist.tail(20)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -483,6 +538,21 @@
       },
       "source": [
         "test_l = model.predict_classes(normed_test_data)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "K-LCbj6ZxUct",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from sklearn.metrics import confusion_matrix\n",
+        "#0,0=true neg, 1,0=false neg, 1,1=true pos, 0,1=false pos\n",
+        "confusion_matrix(test_labels, test_l)"
       ],
       "execution_count": 0,
       "outputs": []
