--- a/fashion_mnist.ipynb
+++ b/fashion_mnist.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "private_outputs": true,
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPnV9pMUQcXWbQBzPvu22m4",
+      "authorship_tag": "ABX9TyO59xyONBXeuAdNjpkRfaXo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,13 +38,57 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fWpejQ074CEd",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Clone the entire repo.\n",
+        "!git clone -l -s https://github.com/cagBRT/Machine-Learning.git cloned-repo\n",
+        "%cd cloned-repo\n",
+        "!ls"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nfDPSOSR4yQw",
+        "colab_type": "text"
+      },
+      "source": [
+        "Fashion-MNIST is intended to serve as a direct drop-in replacement for the original MNIST dataset to benchmark machine learning algorithms, as it shares the same image size and the structure of training and testing splits.<br><br>\n",
+        "'test'\t10,000\n",
+        "'train'\t60,000"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bKuNwSUJ4ZXK",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from IPython.display import Image\n",
+        "Image(\"fashion-mnist-sprite.png\")"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "iK3gZsPSFSCP",
         "colab_type": "text"
       },
       "source": [
-        "# **Set the runtime to GPU**"
+        "# **Set the runtime to GPU**\n",
+        "\n",
+        "Runtime> Change Runtime Type > Python 3 > GPU"
       ]
     },
     {
@@ -55,31 +99,57 @@
         "colab": {}
       },
       "source": [
-        "# This Python 3 environment comes with many helpful analytics libraries installed\n",
-        "# It is defined by the kaggle/python docker image: https://github.com/kaggle/docker-python\n",
-        "# For example, here's several helpful packages to load in \n",
+        "from __future__ import absolute_import, division, print_function, unicode_literals\n",
         "\n",
-        "import numpy as np # linear algebra\n",
-        "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
+        "# Install TensorFlow\n",
+        "try:\n",
+        "  # %tensorflow_version only exists in Colab.\n",
+        "  %tensorflow_version 2.x\n",
+        "except Exception:\n",
+        "  pass\n",
+        "\n",
+        "import tensorflow as tf\n",
+        "import pathlib\n",
+        "\n",
         "import matplotlib.pyplot as plt\n",
-        "# Input data files are available in the \"../input/\" directory.\n",
-        "# For example, running this (by clicking run or pressing Shift+Enter) will list the files in the input directory\n",
+        "import pandas as pd\n",
+        "import seaborn as sns\n",
+        "import numpy as np\n",
+        "import cv2\n",
+        "from imutils import build_montages\n",
+        "\n",
+        "import tensorflow.keras\n",
+        "from tensorflow.keras.datasets import fashion_mnist\n",
+        "from tensorflow.keras.models import Sequential\n",
+        "from tensorflow.keras import backend as K\n",
+        "from tensorflow.keras import optimizers\n",
+        "from tensorflow.keras.utils import to_categorical\n",
+        "from tensorflow import keras\n",
+        "from tensorflow.keras import layers\n",
+        "from tensorflow.keras.layers import Activation, Dense, Dropout, Flatten\n",
+        "from tensorflow.keras.layers import Conv2D, MaxPooling2D\n",
+        "#Adding Callback for early stopping\n",
+        "from tensorflow.keras.callbacks import EarlyStopping\n",
+        "\n",
+        "print(tf.__version__)\n",
         "\n",
         "import os\n",
         "os.environ['TF_CPP_MIN_LOG_LEVEL']='2'\n",
-        "# Any results you write to the current directory are saved as output.\n",
         "\n",
-        "import keras\n",
-        "from keras.datasets import fashion_mnist\n",
-        "from keras.models import Sequential\n",
-        "from keras.layers import Dense, Dropout, Flatten\n",
-        "from keras.layers import Conv2D, MaxPooling2D\n",
-        "from keras import backend as K\n",
-        "#Adding Callback for early stopping\n",
-        "from keras.callbacks import EarlyStopping"
+        "\n"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0N0lyiOv1Bhi",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Fashion MNIST Data Set**"
+      ]
     },
     {
       "cell_type": "code",
@@ -98,6 +168,86 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "2H_qeK2w1IQe",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "print(X_train.size)\n",
+        "print(y_train.size)\n",
+        "print(X_test.size)\n",
+        "print(y_test.size)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LL-JAq_75U6b",
+        "colab_type": "text"
+      },
+      "source": [
+        "The classes: <br>\n",
+        "The ten fashion class labels include:\n",
+        "\n",
+        "T-shirt/top\n",
+        "Trouser/pants\n",
+        "Pullover shirt\n",
+        "Dress\n",
+        "Coat\n",
+        "Sandal\n",
+        "Shirt\n",
+        "Sneaker\n",
+        "Bag\n",
+        "Ankle boot\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jWppSSwC5u1o",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "labelNames = [\"top\", \"trouser\", \"pullover\", \"dress\", \"coat\",\n",
+        "\t\"sandal\", \"shirt\", \"sneaker\", \"bag\", \"ankle boot\"]"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ahWnCubb257X",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "%matplotlib inline  \n",
+        "plt.imshow(X_train[1000], cmap='Greys')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pZ6Wtrkz3P2t",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "plt.imshow(X_test[530], cmap='Greys')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "3FGhOs7NAAcC",
         "colab_type": "code",
         "colab": {}
@@ -105,8 +255,8 @@
       "source": [
         "#defining Parameters\n",
         "num_classes = 10\n",
-        "batch_size = 128\n",
-        "epoch = 8\n",
+        "batch_size = ???\n",
+        "epoch = ?\n",
         "img_rows, img_cols = 28,28"
       ],
       "execution_count": 0,
@@ -175,15 +325,13 @@
       "source": [
         "#Define the model\n",
         "model = Sequential()\n",
-        "model.add(Conv2D(32,kernel_size=(3,3),activation='relu',input_shape=input_shape))\n",
-        "model.add(Conv2D(64,kernel_size=(3,3),activation='relu'))\n",
-        "model.add(MaxPooling2D(pool_size=(2,2)))  \n",
-        "model.add(Conv2D(64,kernel_size=(3,3),activation='relu'))\n",
-        "model.add(Conv2D(64,kernel_size=(3,3),activation='relu'))\n",
-        "model.add(MaxPooling2D(pool_size=(2,2)))\n",
+        "model.add(Conv2D(??,kernel_size=(?,?),activation='??',input_shape=input_shape))\n",
+        "model.add(Conv2D(??,kernel_size=(?,?),activation='??'))\n",
+        "model.add(MaxPooling2D(pool_size=(?,?)))  \n",
+        "#Should more layers be added here?\n",
         "model.add(Flatten())\n",
-        "model.add(Dense(128,activation='relu'))\n",
-        "model.add(Dropout(0.5))\n",
+        "model.add(Dense(???,activation='??'))\n",
+        "model.add(Dropout(??))\n",
         "model.add(Dense(num_classes,activation='softmax'))\n",
         "\n",
         "model.summary()"
@@ -202,9 +350,11 @@
         "my_callback=[EarlyStopping(monitor='val_acc',patience=5,mode=max)]\n",
         "\n",
         "#define compile to minimize categorical loss\n",
-        "model.compile(loss=keras.losses.categorical_crossentropy,\n",
-        "              optimizer=keras.optimizers.adadelta(),\n",
-        "              metrics=['accuracy'])"
+        "model.compile(\n",
+        "    loss='categorical_crossentropy', \n",
+        "    optimizer='adam', \n",
+        "    metrics=['accuracy']\n",
+        ")"
       ],
       "execution_count": 0,
       "outputs": []
@@ -241,10 +391,104 @@
         "\n",
         "#hist.history.keys()\n",
         "\n",
-        "epoch_list = list(range(1,len(hist.history['acc'])+1))  #Values for x axis[1,2,3,4...# of epochs]\n",
-        "plt.plot(epoch_list, hist.history['acc'],epoch_list,hist.history['val_acc'])\n",
+        "epoch_list = list(range(1,len(hist.history['accuracy'])+1))  #Values for x axis[1,2,3,4...# of epochs]\n",
+        "plt.plot(epoch_list, hist.history['accuracy'],epoch_list,hist.history['val_accuracy'])\n",
         "plt.legend(('Training accuracy','Validation Accuracy'))\n",
         "plt.show()\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LTC9VTPr8ZHv",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from google.colab.patches import cv2_imshow\n",
+        "# initialize our list of output images\n",
+        "images = []\n",
+        "# randomly select a few testing fashion items\n",
+        "for i in np.random.choice(np.arange(0, len(y_test)), size=(16,)):\n",
+        "\t# classify the clothing\n",
+        "\tprobs = model.predict(X_test[np.newaxis, i])\n",
+        "\tprediction = probs.argmax(axis=1)\n",
+        "\tlabel = labelNames[prediction[0]]\n",
+        " \n",
+        "\t# extract the image from the testData if using \"channels_first\"\n",
+        "\t# ordering\n",
+        "\tif K.image_data_format() == \"channels_first\":\n",
+        "\t\timage = (X_test[i][0] * 255).astype(\"uint8\")\n",
+        " \n",
+        "\t# otherwise we are using \"channels_last\" ordering\n",
+        "\telse:\n",
+        "\t\timage = (X_test[i] * 255).astype(\"uint8\")\n",
+        "  \t# initialize the text label color as green (correct)\n",
+        "\tcolor = (0, 255, 0)\n",
+        "\t# otherwise, the class label prediction is incorrect\n",
+        "\tif prediction[0] != np.argmax(y_test[i]):\n",
+        "\t\tcolor = (0, 0, 255)\n",
+        " \n",
+        "\t# merge the channels into one image and resize the image from\n",
+        "\t# 28x28 to 96x96 so we can better see it and then draw the\n",
+        "\t# predicted label on the image\n",
+        "\timage = cv2.merge([image] * 3)\n",
+        "\timage = cv2.resize(image, (96, 96), interpolation=cv2.INTER_LINEAR)\n",
+        "\tcv2.putText(image, label, (5, 20), cv2.FONT_HERSHEY_SIMPLEX, 0.75,color, 2)\n",
+        "\t# add the image to our list of output images\n",
+        "\timages.append(image)\n",
+        "# construct the montage for the images\n",
+        "montage = build_montages(images, (96, 96), (4, 4))[0]\n",
+        "# show the output montage\n",
+        "cv2_imshow(montage)\n",
+        "cv2.waitKey(0)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OaDOYWsBCcVr",
+        "colab_type": "code",
+        "colab": {},
+        "cellView": "form"
+      },
+      "source": [
+        "#@title \n",
+        "#defining Parameters\n",
+        "num_classes = 10\n",
+        "batch_size = 128\n",
+        "epoch = 8\n",
+        "img_rows, img_cols = 28,28"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pQjUN7mkBPpI",
+        "colab_type": "code",
+        "colab": {},
+        "cellView": "form"
+      },
+      "source": [
+        "#@title \n",
+        "#Define the model\n",
+        "model = Sequential()\n",
+        "model.add(Conv2D(32,kernel_size=(3,3),activation='relu',input_shape=input_shape))\n",
+        "model.add(Conv2D(64,kernel_size=(3,3),activation='relu'))\n",
+        "model.add(MaxPooling2D(pool_size=(2,2)))  \n",
+        "model.add(Conv2D(64,kernel_size=(3,3),activation='relu'))\n",
+        "model.add(Conv2D(64,kernel_size=(3,3),activation='relu'))\n",
+        "model.add(MaxPooling2D(pool_size=(2,2)))\n",
+        "model.add(Flatten())\n",
+        "model.add(Dense(128,activation='relu'))\n",
+        "model.add(Dropout(0.5))\n",
+        "model.add(Dense(num_classes,activation='softmax'))"
       ],
       "execution_count": 0,
       "outputs": []
