--- a/fashion_mnist.ipynb
+++ b/fashion_mnist.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "private_outputs": true,
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO59xyONBXeuAdNjpkRfaXo",
+      "authorship_tag": "ABX9TyMhWt86tFO95YcwrGe00ys9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,13 @@
         "colab_type": "text"
       },
       "source": [
-        "https://www.kaggle.com/overload10/keras-conv2d-sample-using-fashion-mnist"
+        "# **Fashion-MNIST**\n",
+        "\n",
+        "60,000 training images of clothing<br>\n",
+        "10,000 test images of clothing<br>\n",
+        "The images are 28x28 pixels<br>\n",
+        "There are 10 classes:<bt>\n",
+        "> (\"top\", \"trouser\", \"pullover\", \"dress\", \"coat\",\"sandal\", \"shirt\", \"sneaker\", \"bag\", \"ankle boot\")\n"
       ]
     },
     {
@@ -473,7 +479,7 @@
         "id": "pQjUN7mkBPpI",
         "colab_type": "code",
         "colab": {},
-        "cellView": "form"
+        "cellView": "both"
       },
       "source": [
         "#@title \n",
@@ -489,6 +495,21 @@
         "model.add(Dense(128,activation='relu'))\n",
         "model.add(Dropout(0.5))\n",
         "model.add(Dense(num_classes,activation='softmax'))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xkENY6HtC8yd",
+        "colab_type": "code",
+        "colab": {},
+        "cellView": "form"
+      },
+      "source": [
+        "#@title \n",
+        "https://www.kaggle.com/overload10/keras-conv2d-sample-using-fashion-mnist"
       ],
       "execution_count": 0,
       "outputs": []
